Fixed column widths and truncation

--- a/www/public/sass/style.scss
+++ b/www/public/sass/style.scss
@@ -4,6 +4,10 @@ body {
   padding-top: 70px;
 }
 
+#datatable {
+  table-layout: fixed;
+}
+
 .dataTable td {
   overflow: hidden;
   white-space: nowrap;
